# adv-web-dev-project

./: .env.example  README.md  docker-compose.yml
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: api.js
frontend/src/components/: Nav.jsx  Scores.jsx
frontend/src/pages/: App.jsx
quizmaster-project/: README.md  docker-compose.yml
quizmaster-project/backend/: Dockerfile  docker-compose.yml  pyproject.toml  quiz.db  quiz_backup.db  requirements.txt
quizmaster-project/backend/app/: main.py
quizmaster-project/backend/app/api/: routes_auth.py  routes_quiz.py  routes_scores.py
quizmaster-project/backend/app/core/: security.py
quizmaster-project/backend/app/db/: models.py  schemas.py  session.py
quizmaster-project/backend/latest_logs/selenium_tests.QuizAppTests.test_delete_account/: basic_test_info.txt  page_source.html
quizmaster-project/backend/latest_logs/selenium_tests.QuizAppTests.test_quiz_flow/: basic_test_info.txt  page_source.html
quizmaster-project/backend/latest_logs/selenium_tests.QuizAppTests.test_settings_flow/: basic_test_info.txt  page_source.html
quizmaster-project/backend/quizmaster_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quizmaster-project/backend/tests/: selenium_tests.py  test_auth.py  test_quiz.py
